<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/fragment_settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:background="@color/white_87"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="10dp"
    android:textDirection="rtl">

    <TextView
        android:id="@+id/about_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_style"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/about"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/card_style"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/about_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"/>

        <TextView
            android:id="@+id/about_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_version"/>

        <TextView
            android:id="@+id/about_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>